# Apply-Lightweight-Fine-Tuning-to-a-Foundation-Model

./: .gitignore  LightweightFineTuning.ipynb  README.md  pyproject.toml
data/prompt_classification1/checkpoint-32/: optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
data/prompt_classification1/checkpoint-64/: optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
data/prompt_classification1/checkpoint-96/: optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
data/prompt_classification2/checkpoint-125/: adapter_config.json  adapter_model.safetensors  rng_state.pth  scheduler.pt  trainer_state.json
data/prompt_classification2/checkpoint-250/: adapter_model.safetensors  rng_state.pth  scheduler.pt  trainer_state.json
gpt-lora/: score.pth
